k8s/american-airlines-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: american-airlines-service
spec:
  # change type to LoadBalancing to expose service for testing
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8081
  selector:
    app: american-airlines-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: american-airlines-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: american-airlines-service
  template:
    metadata:
      labels:
        app: american-airlines-service
    spec:
      containers:
        - name: american-airlines-service
          image: distributedairways/american-airlines:latest
          # Always pull because latest tag is constant
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
