k8s/broker.yaml
apiVersion: v1
kind: Service
metadata:
  name: broker
spec:
  # temporary set to LB since frontend not ready
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: broker
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: broker
  template:
    metadata:
      labels:
        app: broker
    spec:
      containers:
        - name: broker
          image: distributedairways/broker:latest
          # Always pull because latest tag is constant
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
