k8s/cathay-pacific-postgres.yaml
# Service
apiVersion: v1
kind: Service
metadata:
  name: cathay-pacific-postgres
  labels:
    app: postgres
    airline: cathay-pacific
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
    airline: cathay-pacific
---
# Deployment pod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cathay-pacific-postgres
  labels:
    app: postgres
spec:
  selector:
    matchLabels:
      app: postgres
      airline: cathay-pacific
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
        airline: cathay-pacific
    spec:
      containers:
        - name: master
          image: postgres:latest
          volumeMounts:
            - mountPath: /var/lib/postgres/cathay
              name: cathay-pacific-postgres
          resources:
            requests:
              memory: 100M
          ports:
            - containerPort: 6379
      volumes:
        - name: cathay-pacific-postgres
          persistentVolumeClaim:
            claimName: cathay-pacific-postgres
