k8s/emirates-mongo.yaml
# Service
apiVersion: v1
kind: Service
metadata:
  name: emirates-mongo
  labels:
    app: mongo
    airline: emirates
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongo
    airline: emirates
---
# Deployment pod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emirates-mongo
  labels:
    app: mongo
spec:
  selector:
    matchLabels:
      app: mongo
      airline: emirates
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo
        airline: emirates
    spec:
      containers:
        - name: master
          image: mongo:latest
          volumeMounts:
            - mountPath: /data/db
              name: emirates-mongo
          resources:
            requests:
              memory: 100M
          ports:
            - containerPort: 27017
      volumes:
        - name: emirates-mongo
          persistentVolumeClaim:
            claimName: emirates-mongo
