k8s/emirates-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emirates-service
spec:
  # change type to LoadBalancing to expose service for testing
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8083
  selector:
    app: emirates-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emirates-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emirates-service
  template:
    metadata:
      labels:
        app: emirates-service
    spec:
      containers:
        - name: emirates-service
          image: distributedairways/emirates:latest
          # Always pull because latest tag is constant
          imagePullPolicy: Always
          ports:
            - containerPort: 8083
