k8s/ryan-air-mongo.yaml
# Service
apiVersion: v1
kind: Service
metadata:
  name: ryan-air-mongo
  labels:
    app: mongo
    airline: ryan-air
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongo
    airline: ryan-air
---
# Deployment pod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ryan-air-mongo
  labels:
    app: mongo
spec:
  selector:
    matchLabels:
      app: mongo
      airline: ryan-air
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo
        airline: ryan-air
    spec:
      containers:
        - name: master
          image: mongo:latest
          volumeMounts:
            - mountPath: /data/db
              name: ryan-air-mongo
          resources:
            requests:
              memory: 100M
          ports:
            - containerPort: 27017
      volumes:
        - name: ryan-air-mongo
          persistentVolumeClaim:
            claimName: ryan-air-mongo
