k8s/ryan-air-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ryan-air-service
spec:
  # change type to LoadBalancing to expose service for testing
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8084
  selector:
    app: ryan-air-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ryan-air-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ryan-air-service
  template:
    metadata:
      labels:
        app: ryan-air-service
    spec:
      containers:
        - name: ryan-air-service
          image: distributedairways/ryan-air:latest
          # Always pull because latest tag is constant
          imagePullPolicy: Always
          ports:
            - containerPort: 8084
